# ongo-voice-rt

./: .gitignore  Makefile  README.md  index.html  pyproject.toml
configs/: pipeline.yaml
docker/: Dockerfile
src/ongovoice/: __init__.py  cli.py
src/ongovoice/api/: __init__.py  app.py
src/ongovoice/api/routes/: health.py  sessions.py  turns.py
src/ongovoice/asr/: __init__.py  mock_asr.py  whisper_edge.py
src/ongovoice/audio/: __init__.py  ring_buffer.py  vad.py  wake_word.py
src/ongovoice/core/: __init__.py  errors.py  protocols.py  types.py
src/ongovoice/llm/: __init__.py  anthropic_provider.py  mock_provider.py  openai_provider.py  pricing.py
src/ongovoice/pipeline/: __init__.py  manager.py
src/ongovoice/router/: __init__.py  classifier.py  policy.py
src/ongovoice/telemetry/: __init__.py  aggregator.py
src/ongovoice/tts/: __init__.py  mock_tts.py  piper_tts.py
tests/: conftest.py  test_api.py  test_classifier.py  test_core_types.py  test_pipeline_manager.py  test_pricing.py  test_ring_buffer.py  test_router_policy.py  test_vad.py
