[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ongovoice"
version = "0.2.0"
description = "Edge-first real-time voice pipeline for the Ongo companion robot."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [{ name = "Sameer M.", email = "sameer@example.com" }]
keywords = ["edge-audio", "voice-assistant", "streaming-asr", "robotics", "ongo"]

dependencies = [
    "numpy>=1.26",
    "pydantic>=2.7",
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "websockets>=12.0",
    "typer>=0.12",
    "rich>=13.7",
    "structlog>=24.1",
    "httpx>=0.27",
    "anyio>=4.4",
]

[project.optional-dependencies]
anthropic = ["anthropic>=0.34"]
openai    = ["openai>=1.40"]
whisper   = ["faster-whisper>=1.0"]
piper     = ["piper-tts>=1.2"]
dev       = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "mypy>=1.10",
]
all       = ["ongovoice[anthropic,openai,whisper,piper,dev]"]

[project.scripts]
ongovoice = "ongovoice.cli:app"

[project.urls]
Homepage = "https://github.com/samson1402/ongo-voice-rt"

# ── tooling ─────────────────────────────────────────────────────────

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "PL", "RUF", "ASYNC"]
ignore = ["PLR0913"]

[tool.mypy]
python_version = "3.11"
strict = true
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-ra -q --strict-markers"

[tool.coverage.run]
source = ["src/ongovoice"]
branch = true

[tool.hatch.build.targets.wheel]
packages = ["src/ongovoice"]
